--- a/Chating Application/Views/Shared/_Layout.cshtml
+++ b/Chating Application/Views/Shared/_Layout.cshtml
@@ -25,6 +25,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="#" id="notificationDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                                <span class="badge badge-danger" id="notificationCount" style="display: none;">0</span>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notificationDropdown">
+                                <h6 class="dropdown-header">Notifications</h6>
+                                <div id="notificationList" style="max-height: 200px; overflow-y: auto;"></div>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-center" href="/Chat">Show all notifications</a>
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -44,6 +58,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/chat.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
